--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "vue": "^2.5.11",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
@@ -30,6 +31,6 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"  
+    "webpack-dev-server": "^2.9.1"
   }
 }
